--- a/src/client/assets/style.scss
+++ b/src/client/assets/style.scss
@@ -51,10 +51,12 @@ button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
+  margin: 10px;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: rgb(0, 183, 255);
+  color: black;
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -65,17 +67,31 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
-
-.addNewButtons {
-  position: fixed;
-  margin-top: 5%;
-  right: 10;
+table {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-start;
+  word-wrap: break-word;
+  width: 100%;
 }
 
-.addNewButtons button {
+table tr {
+  display: flex;
+  flex-direction: rows;
+  width: 90%;
+}
+
+table th {
+  font-weight: bold;
   margin: 10px;
-  background-color: rgb(0, 183, 255);
-  color: black;
+  width: 90%;
+}
+
+table td {
+  display: flex;
+  flex-grow: inherit;
+  border: 1px solid white;
+  min-width: 17%;
 }
 
 Dialog {
@@ -87,11 +103,9 @@ Dialog {
 }
 
 form {
-
   flex-direction: row;
   text-align: left;
   margin: 2%;
-
 }
 form label {
   font-weight: bold;
@@ -141,7 +155,6 @@ form input {
   border: none;
   display: flex;
   justify-content: flex-start;
-  
 }
 
 // .logo {
